# simple-crawler

./: .gitignore  README.md  pyproject.toml  run_api.sh  run_crawler.sh
backend/: settings.py
backend/api/: main.py
backend/crawler/: crawler.py  main.py  worker.py
backend/storage/: models.py  repositories.py
