[project]
name = "simple-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20.0",
    "beautifulsoup4>=4.12.3",
    "greenlet>=3.1.1",
    "httpx>=0.27.2",
    "pydantic>=2.9.2",
    "sqlmodel>=0.0.22",
]
